--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
    "devDependencies": {
       "@types/express": "^4.17.21",
       "@types/node": "^16.11.10",
+      "@types/uuid": "^10.0.0",
       "ts-node": "^10.9.1",
       "typescript": "4.5.2"
    },
@@ -14,7 +15,8 @@
       "Measure": "file:",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
-      "typeorm": "^0.3.20"
+      "typeorm": "^0.3.20",
+      "uuid": "^10.0.0"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
