--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
       "@google/generative-ai": "^0.17.1",
       "axios": "^1.7.5",
       "express": "^4.19.2",
+      "jsonwebtoken": "^9.0.2",
       "Measure": "file:",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
+      "sharp": "^0.33.5",
       "typeorm": "^0.3.20",
       "uuid": "^10.0.0"
    },
